--- a/index.html
+++ b/index.html
@@ -13,22 +13,9 @@
   <style>
     html, body { width: 100%; height: 100%; margin: 0; overflow: hidden; }
     #renderCanvas { width: 100%; height: 100%; display:block; }
-    #adminPanel {
-      position: absolute; top: 10px; left: 10px;
-      background: rgba(0,0,0,0.6); color: white;
-      padding: 10px; border-radius: 8px; font-family: Arial; line-height: 1.4;
-    }
-    #loginPanel {
-      position: absolute; top: 10px; right: 10px;
-      background: rgba(0,0,0,0.6); color: white;
-      padding: 10px; border-radius: 8px; font-family: Arial;
-    }
-    #vagaPanel {
-      position: absolute; bottom: 10px; left: 10px;
-      background: rgba(0,0,0,0.7); color: white;
-      padding: 10px; border-radius: 8px; font-family: Arial;
-      display: none;
-    }
+    #adminPanel { position: absolute; top: 10px; left: 10px; background: rgba(0,0,0,0.6); color: white; padding: 10px; border-radius: 8px; font-family: Arial; line-height: 1.4;}
+    #loginPanel { position: absolute; top: 10px; right: 10px; background: rgba(0,0,0,0.6); color: white; padding: 10px; border-radius: 8px; font-family: Arial; }
+    #vagaPanel { position: absolute; bottom: 10px; left: 10px; background: rgba(0,0,0,0.7); color: white; padding: 10px; border-radius: 8px; font-family: Arial; display: none; }
     #vagaPanel button { margin: 3px; padding: 6px 10px; }
     .hint { font-size: 12px; opacity: 0.85; }
   </style>
@@ -62,7 +49,6 @@
 </div>
 
 <script>
-  // --- Config Firebase ---
   const firebaseConfig = {
     apiKey: "AIzaSyAE8AgqS_rpQygvmO6ugTX5yQSjQDwJ0vk",
     authDomain: "smamus3d.firebaseapp.com",
@@ -82,14 +68,11 @@
   let vagas = [];
   let vagaSelecionada = null;
   let moverAtivo = false;
-
   let role = "viewer";
   const PASSWORDS = { operator: "op123", admin: "admin123" };
-
   const PARKING_MODEL_FILE = "modelo.glb"; 
   const CAR_BASE_URL = "https://linckrafael.github.io/cars3D/";
   const CAR_MODELS = ["car1.glb","car2.glb","car3.glb","car5.glb","car6.glb","car7.glb","car8.glb","car9.glb","car10.glb","car12.glb","car13.glb","car14.glb","car15.glb","car19.glb"];
-
   const VAGA_LARGURA = 4.0;
   const VAGA_COMPRIMENTO = 8.0;
   const VAGA_ALTURA = 2.0;
@@ -131,34 +114,15 @@
 
   scene = new BABYLON.Scene(engine);
 
-  // --- Câmera Desktop/Mobile ---
-  function isMobile() {
-    return /Android|iPhone|iPad|iPod|Opera Mini|IEMobile|WPDesktop/i.test(navigator.userAgent);
-  }
-
-  if(isMobile()){
-    camera = new BABYLON.ArcRotateCamera("camera",-Math.PI/2,Math.PI/3,30,new BABYLON.Vector3(0,0,0),scene);
-    camera.attachControl(canvas,true);
-    camera.lowerRadiusLimit = 10;
-    camera.upperRadiusLimit = 100;
-    camera.wheelDeltaPercentage = 0.01;
-    camera.panningSensibility = 50;
-    camera.angularSensibilityX = 500;
-    camera.angularSensibilityY = 500;
-  } else {
-    camera = new BABYLON.UniversalCamera("camera", new BABYLON.Vector3(0,12,-28), scene);
-    camera.attachControl(canvas,true);
-    camera.keysUp.push(87);
-    camera.keysDown.push(83);
-    camera.keysLeft.push(65);
-    camera.keysRight.push(68);
-    camera.speed = 15;
-    camera.angularSensibility = 450;
-    camera.inertia = 0.1;
-    camera.inputs.addMouseWheel();
-    camera.wheelPrecision = 50;
-    camera.rotation.y = Math.PI;
-  }
+  // --- Câmera universal para desktop e mobile ---
+  camera = new BABYLON.UniversalCamera("camera", new BABYLON.Vector3(0,12,-28), scene);
+  camera.attachControl(canvas,true);
+  camera.keysUp.push(87); camera.keysDown.push(83); camera.keysLeft.push(65); camera.keysRight.push(68);
+  camera.speed = 15;
+  camera.angularSensibility = 450;
+  camera.inertia = 0.1;
+  camera.inputs.addMouseWheel();
+  camera.wheelPrecision = 50;
 
   new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0,1,0), scene);
 
@@ -179,7 +143,7 @@
 
   BABYLON.SceneLoader.Append("https://linckrafael.github.io/Smamus3Dv7/", PARKING_MODEL_FILE, scene);
 
-  // --- Funções utilitárias ---
+  // --- Funções utilitárias e manipulação de vagas (mesmo código anterior) ---
   function getSizeOf(node){ const bv = node.getHierarchyBoundingVectors(true); return { size: bv.max.subtract(bv.min), bv }; }
   function criarVagaContorno(pos){ 
       const plane = BABYLON.MeshBuilder.CreatePlane("vagaPlane",{width:VAGA_LARGURA,height:VAGA_COMPRIMENTO},scene); 
@@ -239,6 +203,7 @@
       return carroRoot; 
   }
 
+  // --- Firebase sincronização ---
   function atualizarFirebase(vaga, id){
       db.ref('vagas/'+id).set({
           x: vaga.mesh.position.x,
@@ -317,14 +282,8 @@
           if(!vaga){
               const novaMesh = criarVagaContorno(new BABYLON.Vector3(vData.x,0.01,vData.z));
               novaMesh.rotation.y = vData.rotY;
-
-              // Atualizar cor da vaga de acordo com ocupação
-              if(vData.ocupada && novaMesh.material){
-                  novaMesh.material.diffuseColor = new BABYLON.Color3(1,0,0); // vermelho
-              } else if(novaMesh.material){
-                  novaMesh.material.diffuseColor = new BABYLON.Color3(0,1,0); // verde
-              }
-
+              if(vData.ocupada && novaMesh.material) novaMesh.material.diffuseColor = new BABYLON.Color3(1,0,0);
+              else if(novaMesh.material) novaMesh.material.diffuseColor = new BABYLON.Color3(0,1,0);
               vaga = { mesh: novaMesh, ocupada: vData.ocupada, carro: null, id };
               vagas.push(vaga);
               if(vaga.ocupada) ocuparVagaFirebase(vaga);
@@ -333,13 +292,8 @@
               vaga.mesh.position.z = vData.z;
               vaga.mesh.rotation.y = vData.rotY;
               vaga.ocupada = vData.ocupada;
-
-              if(vaga.ocupada && vaga.mesh.material){
-                  vaga.mesh.material.diffuseColor = new BABYLON.Color3(1,0,0);
-              } else if(vaga.mesh.material){
-                  vaga.mesh.material.diffuseColor = new BABYLON.Color3(0,1,0);
-              }
-
+              if(vaga.ocupada && vaga.mesh.material) vaga.mesh.material.diffuseColor = new BABYLON.Color3(1,0,0);
+              else if(vaga.mesh.material) vaga.mesh.material.diffuseColor = new BABYLON.Color3(0,1,0);
               if(vaga.ocupada && !vaga.carro) ocuparVagaFirebase(vaga);
               if(!vaga.ocupada && vaga.carro){ vaga.carro.dispose(); vaga.carro=null; }
           }
@@ -350,21 +304,20 @@
   scene.onPointerObservable.add(async(pointerInfo)=>{
       if(pointerInfo.type!==BABYLON.PointerEventTypes.POINTERPICK)return;
       const pick=pointerInfo.pickInfo; if(!pick.hit)return;
-
-      if(moverAtivo&&vagaSelecionada){
+      if(moverAtivo && vagaSelecionada){
           vagaSelecionada.mesh.position=pick.pickedPoint.clone().add(new BABYLON.Vector3(0,0.01,0));
-          if(vagaSelecionada.carro){posicionarSobreVaga(vagaSelecionada.carro,vagaSelecionada.mesh);}
+          if(vagaSelecionada.carro) posicionarSobreVaga(vagaSelecionada.carro,vagaSelecionada.mesh);
           atualizarFirebase(vagaSelecionada,vagaSelecionada.id);
           moverAtivo=false;
       } else {
-          const pickedMesh=pick.pickedMesh;
-          const vaga=encontrarVagaPorMesh(pickedMesh);
+          const pickedMesh = pick.pickedMesh;
+          const vaga = encontrarVagaPorMesh(pickedMesh);
           if(vaga) selecionarVaga(vaga);
       }
   });
 
-  engine.runRenderLoop(()=>{ scene.render(); });
-  window.addEventListener("resize",()=>{engine.resize();});
+  engine.runRenderLoop(()=>scene.render());
+  window.addEventListener("resize",()=>engine.resize());
 </script>
 </body>
 </html>
